shared/css/custom_styles.css
/* ... */
.custom-file-label::after {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	z-index: 3;
	display: block;
	height: calc(1.5rem + .5rem - 1px);
	padding: .25rem .5rem;
	font-size: .875rem;
	line-height: 1.5;
	color: #495057;
	content: "Browse";
	background-color: #e9ecef;
	border-left: inherit;
	border-radius: 0 .2rem .2rem 0;
}
.fas-info-circle, .fa-info-circle {
	color: #036ee0 !important;
	position: relative;
	top: -3px;
	font-size: .875rem;
}
.smaller {
	font-size: .7em !important;
}
.card-header h3 a.collapsed:before, .card-header h2 a.collapsed:before, .card-header h2 button.collapsed:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 900;
	float: left !important;
	content: "\f067";
	cursor: pointer;
}
.card-header h3 a:before, .card-header h2 a:before, .card-header h2 button:before {
	font-family: "Font Awesome 5 Free";
	font-weight: 900;
	content: "\f068";
	padding-right: 5px;
	float: left !important;
	cursor: pointer;
}
.card-header h3 a:hover, .card-header h3 a:active, .card-header h3 a:focus {
	text-decoration: none;
}
.nav-link.dropdown-toggle:hover:before {
	transform: rotate(0deg);
}
.nav-link.dropdown-toggle:hover:after {
	transform: rotate(-90deg);
}
.card-body li.list-group-item span:last-child {
	display: none;
}
input#readMore_check_id {
	display: none;
}
.jqx-grid-load {
	background-image: url("../../images/spinner_712_sm.gif");
	background-position: 50% 50%;
	background-repeat: no-repeat;
}
.list-style-disc {
	list-style-type: disc;
}
#overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, .5);
	opacity: 0.99;
	display: none;
}
.MediaAccordionHide {
	display: block;
}
.MediaAccordionShow {
	display: none;
}
/************tabs -- redone for accessibility  ***************/
.tabpanel {
	margin: 20px;
	padding: 0;
}
.tablist {
	margin: 0 0px;
	padding: 0;
	list-style: none;
}
.panel {
	clear: both;
	display: block;
	margin: 0 0 0 0;
	padding: 10px;
	width: 100%;
	background: #f2f2f2;
	border-bottom-left-radius: .5em;
	border-bottom-right-radius: .5em;
}
.tabs {
	background-color: #3e657d;
	padding: .75rem .5rem .5rem .5rem;
}
.tab-content {
	border-top: none;
	border-radius: 0;
	background-color: #f5f5f5;
	margin-bottom: 0.2rem;
}
.tab-card-header {
	background-color: #3E6F7D;
	padding-top: .5rem;
	border-radius: 4px 4px 0 0;
}
.tab-headers {
	padding: 0 1rem;
}
.tab-headers button {
	font: 400 .9rem Arial;
	padding: 1px 6px;
	border-width: 0;
	border-style: solid;
	border-color: #deebec;
	border-image: initial;
}
.tab-headers button {
	background-color: #f5f5f5;
	padding: .25rem 1rem;
	margin: 0 .25rem 0 0;
	border-top-left-radius: .25rem;
	border-top-right-radius: .25rem;
}
.tab-headers button[aria-selected='true'] {
	color: black;
	background-color: #f5f5f5;
	border-top: 3px solid white;
	border-bottom: 1px solid #f5f5f5;
	cursor: pointer;
	border-right: 1px solid white;
    border-left: 1px solid white;
}
.tab-headers button[aria-selected='false'] {
	color: black;
	background-color: #f5f5f5;
	border-bottom: 1px solid #3e657D;
	border-top: 3px solid #deebec;
	cursor: pointer;
		border-right: 1px solid #deebec;
    border-left: 1px solid #deebec;
}
.card-header {
	padding: .5rem .25rem 0rem .25rem;
}
.accordion .card-header {
	padding: .25rem .5rem;
}
div[aria-hidden='true'] {
	display: none;
}
div[aria-hidden='false'] {
	display: block;
}
.hidden {
	display: none;
}


.grow-wrap {
  /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
  display: grid;
}
.grow-wrap::after {
  /* Note the weird space! Needed to preventy jumpy behavior */
  content: attr(data-replicated-value) " ";

  /* This is how textarea text behaves */
  white-space: pre-wrap;

  /* Hidden from view, clicks, and screen readers */
  visibility: hidden;
}
.grow-wrap > textarea {
  /* You could leave this, but after a user resizes, then it ruins the auto sizing */
  resize: none;

  /* Firefox shows scrollbar on growth, you can hide like this. */
  overflow: hidden;
}
.grow-wrap > textarea,
.grow-wrap::after {
  /* Identical styling required!! */
  border: 1px solid black;
  padding: 0.5rem;
  font: inherit;

  /* Place on top of each other */
  grid-area: 1 / 1 / 2 / 2;
}

body {
  margin: 2rem;
  font: 1rem/1.4 system-ui, sans-serif;
}

label {
  display: block;
}


/************end tabs -- redone for accessibility  ***************/
/****************end all screen styles*********************/
/**********************************************************/
/*********************************/
/* Device styles below ***********/
/*********************************/
@media only screen and (min-width: 1380px) {
	.cbp-spmenu-push-toleft {
		width: 81%;
		left: 19%;
		-webkit-transition: all 0.3s ease;
		-moz-transition: all 0.3s ease;
		transition: all 0.3s ease;
	}
	.w-350 {
		width: 100%;
	}
}
/* 
Max width before this PARTICULAR table gets nasty
This query will take effect for any screen smaller than 760px
and also iPads specifically.
*/
@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
	/* Force table to not be like tables anymore */
	table, thead, tbody, th, td, tr {}
	.step-arrow {
		background-color: #deebec;
		border-bottom: 1px solid #aaa;
	}
}
@media only screen and (max-width: 990px) {
	input#searchText.form-control {
		min-width: auto;
	}
	h1 {
		margin-bottom: 0;
	}
}
@media (min-width:1060px) and (max-width: 1459px) {
	form#regForm.tab {
		display: none;
	}
}
@media (min-width:768px) and (max-width: 1059px) {
	.card_search {
		padding-right: 0;
		padding-left: 0;
	}
}
/* ... */

